# vrl_framework

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  WEIGHTS_TERMS_OF_USE.md  environment.yml  py.typed  pyproject.toml  requirements.txt  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linting.yml  tests.yml
docs/: architecture_and_theory.md  environment_and_physics.md  execution_and_training_pipeline.md  metrics_and_evaluation.md
scripts/: build_docker.sh  download_weights.py  format_code.sh  run_cluster_training.sh  run_tests.sh  setup_env.sh
src/vrl_framework/: version.py
src/vrl_framework/core/: __init__.py  contracts.py  settings.py
src/vrl_framework/environment/: __init__.py  replay_buffer.py  world_dynamics.py
src/vrl_framework/math_ops/: __init__.py  geometry.py
src/vrl_framework/metrics/: ablation.py
src/vrl_framework/models/: __init__.py  agents.py  components.py  planners.py
src/vrl_framework/system/: __init__.py  ipc_core.py  telemetry.py
src/vrl_framework/trainer/: __init__.py  ppo_engine.py
tests/: conftest.py
tests/e2e/: test_full_system_smoke.py
tests/integration/: test_endurance_and_recovery.py  test_pipeline_convergence.py
tests/performance/: test_latency_benchmarks.py
tests/property/: conftest.py  strategies.py
tests/property/math_ops/: test_geometry_fuzz.py
tests/property/models/: test_components_fuzz.py
tests/property/trainer/: test_io_fuzz.py
tests/reproducibility/: test_env_trajectory_hashing.py  test_gradient_determinism.py
tests/sanity/: test_cuda_and_bnb_allocators.py  test_ipc_socket_permissions.py
tests/unit/core/: test_system_contracts.py
tests/unit/entrypoints/: test_entrypoints.py
tests/unit/environment/: test_replay_buffer.py  test_world_dynamics.py
tests/unit/math_ops/: test_geometry.py
tests/unit/models/: test_agents.py  test_components.py  test_planners.py
tests/unit/system/: test_infrastructure.py
(+1 files in other folders)
